--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="google-site-verification"
+      content="B6nmRq9pR4Ds1JxT4l5CuZDT5dKzq8rtjdwUB8XcFMg"
+    />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Welcome to my portfolio" />
     <meta
-      name="description"
-      content="Welcome to my portfolio"
+      name="keywords"
+      content="Akshay Shinde,Akshay Shinde,Akshay Shinde Portfolio,Akshay Shinde portfolio"
     />
-    <meta name="keywords" content="Akshay Shinde,Akshay Shinde,Akshay Shinde Portfolio,Akshay Shinde portfolio">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="favicon" href="/public/favicon.png">
+    <link rel="favicon" href="/public/favicon.png" />
     <title>Akshay Shinde</title>
   </head>
   <body>
